3.52   (18 July 2001)
- changed Less_distance_to_point_[23] to use default construction

3.51   (12 July 2001)
- Add Kernel_traits<>.

3.50   (12 July 2001)
- Added Arity to Call_perpendicular_to_get.

3.49   (10 July 2001)
- further traits update 
- New predicate : coplanar_orientation(3 points).

3.48   (26 June 2001)
- Deprecate Equal_xy_2 and Equal_xyz_3.

3.47   (21 June 2001)
- Cleanup kernel_to_kernel.h
- Use new macros for the traits interface so that it can be reused elsewhere.

3.46   (21 June 2001)
- Traits update.

3.45   (20 June 2001)
- Cleanup misc.h and don't include it from basic.h.
- Added Construct_orthogonal_vector_[23]
- Added Construct_opposite_vector_[23]

3.44   (19 June 2001)
- Change to support cgal_window instead of LEDA (CGAL_USE_CGAL_WINDOW).

3.43   (19 June 2001)
- added Construct_centroid_[23]

3.42   (19 June 2001)
- added Bounded_side_2 and Bounded_side_3 to traits

3.41   (18 June 2001)
- #include all _2 and _3 classes in user_classes.h.

3.40   (7 June 2001)
- Move homogeneous-only files to H2.

3.39   (30 May 2001)
- Remove Compare_distance_to_point_[23].

3.38   (29 May 2001)
- Add Compare_distance_[23].

3.37   (1 May 2001)
- angle().
- compare_x_at_y()
- Less_signed_distance_to_plane_3

3.36   (27 Apr 2001)
- Rename construct_tetrahedron_object to construct_tetrahedron_3_object.

3.35   (26 Apr 2001)
- Change coplanar_side_of_oriented_circle
  to     coplanar_side_of_bounded_circle.

3.34   (13 Apr 2001)
- Remove Coplanar_orientation(3 points, 1 vector).

3.33   (13 Apr 2001)
- Coplanar_side_of_oriented_circle.

3.32   (6  Apr 2001)
- Port to alpha.

3.31   (23 Mar 2001)
- Add Construct_center_[23].

3.30   (20 Mar 2001)
- squared_radius() and Compute_squared_radius_2 and _3.

3.29   (16 Mar 2001)
- Side_of_bounded_circle_2 and Side_of_bounded_sphere_3.

3.28   (6 Mar 2001)
- Added Compute_squared_distance_2 and 3.
- Remove references to point_vector_declarationsH2.h.

3.27   (28 Feb 2001)